# Magical_Canvas

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  app.py  canvas.py  color_ranges.py  conftest.py  main.py  pyproject.toml  test_color_ranges.py  test_tracker.py  tracker.py
