[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-air-canvas"
version = "1.0.0"
description = "A beginner-friendly OpenCV webcam air painting project."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Virtual Air Canvas Contributors" }]
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
air-canvas = "virtual_air_canvas.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
